Start the ink storage component refactor